<?xml version="1.0" encoding="utf-8"?>
<!-- file: strings.xml -->
<!-- author: Yolanda Alonso Barbero -->
<resources>
    <string name="app_name">
        PasswordApp
    </string>
    <string name="app_title">
        Temperature Conversion
    </string>
    <string name="title_activity_temperature_conversion">
        Temperature Conversion
    </string>
    <string name="label_to_celsius">
        Fahrenheit to Celsius(°F -> °C)
    </string>
    <string name="label_to_fahrenheit">
        Celsius to Fahrenheit(°C -> °F)
    </string>
    <string name="invalid_password">
        Sorry but the password you entered was invalid.
    </string>
    <string name="password_hint">
        Password
    </string>
    <string name="start">
        Start
    </string>
</resources>