<?xml version="1.0" encoding="utf-8"?>
<!-- file: main_password.xml -->
<!-- author: Yolanda Alonso Barbero -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tx_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dip"
        android:gravity="center"
        android:text="@string/app_title"
        android:textAllCaps="true"
        android:textColor="@color/colorLavender"
        android:textSize="35dip"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edit_tx_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="35dip"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@color/colorLavender" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="150dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dip"
        android:onClick="submitPassword"
        android:text="@string/start"
        android:textColor="@color/colorLavender"/>

</LinearLayout>
